// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sort parameters tests > Query with incorrect sort direction 1`] = `
{
  "query": "query ($created_name: String!, $q: String!, $siteKey: String!, $language: String!, $functionScoreId: String!, $nodeType: String!, $size: Int!, $page: Int!) {
  search(
    q: $q
    siteKeys: [$siteKey]
    language: $language
    workspace: fake
    functionScoreId: $functionScoreId
    filters: { nodeType: { type: $nodeType } }
  ) {
    results(size: $size, page: $page) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: $created_name)
      }
    }
  }
}",
  "variables": {
    "created_name": "jcr:created",
    "functionScoreId": "fake",
    "language": "fake",
    "nodeType": "fake",
    "page": 0,
    "q": "",
    "siteKey": "fake",
    "size": 5,
  },
}
`;

exports[`Sort parameters tests > Query with incorrect sort field 1`] = `
{
  "query": "query ($created_name: String!, $q: String!, $siteKey: String!, $language: String!, $functionScoreId: String!, $nodeType: String!, $size: Int!, $page: Int!) {
  search(
    q: $q
    siteKeys: [$siteKey]
    language: $language
    workspace: fake
    functionScoreId: $functionScoreId
    filters: { nodeType: { type: $nodeType } }
  ) {
    results(size: $size, page: $page) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: $created_name)
      }
    }
  }
}",
  "variables": {
    "created_name": "jcr:created",
    "functionScoreId": "fake",
    "language": "fake",
    "nodeType": "fake",
    "page": 0,
    "q": "",
    "siteKey": "fake",
    "size": 5,
  },
}
`;

exports[`Sort parameters tests > Query with sort 1`] = `
{
  "query": "query ($created_name: String!, $q: String!, $siteKey: String!, $language: String!, $functionScoreId: String!, $nodeType: String!, $size: Int!, $page: Int!, $sortField: String!) {
  search(
    q: $q
    siteKeys: [$siteKey]
    language: $language
    workspace: fake
    functionScoreId: $functionScoreId
    filters: { nodeType: { type: $nodeType } }
  ) {
    results(size: $size, page: $page, sortBy: { dir: ASC, field: $sortField }) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: $created_name)
      }
    }
  }
}",
  "variables": {
    "created_name": "jcr:created",
    "functionScoreId": "fake",
    "language": "fake",
    "nodeType": "fake",
    "page": 0,
    "q": "",
    "siteKey": "fake",
    "size": 5,
    "sortField": "jcr:title",
  },
}
`;

exports[`Sort parameters tests > Query without sort 1`] = `
{
  "query": "query ($created_name: String!, $q: String!, $siteKey: String!, $language: String!, $functionScoreId: String!, $nodeType: String!, $size: Int!, $page: Int!) {
  search(
    q: $q
    siteKeys: [$siteKey]
    language: $language
    workspace: fake
    functionScoreId: $functionScoreId
    filters: { nodeType: { type: $nodeType } }
  ) {
    results(size: $size, page: $page) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: $created_name)
      }
    }
  }
}",
  "variables": {
    "created_name": "jcr:created",
    "functionScoreId": "fake",
    "language": "fake",
    "nodeType": "fake",
    "page": 0,
    "q": "",
    "siteKey": "fake",
    "size": 5,
  },
}
`;
